--- a/src/teamSetup.html
+++ b/src/teamSetup.html
@@ -47,7 +47,7 @@
     <div class="main">
         <div class="teamSetup">
             <div class="members">
-                <div class="names">
+                <div class="names" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <div class="subject" id="1" draggable="true" ondragstart="drag(event)">Joe Welsh</div>
                     <div class="subject" id="2" draggable="true" ondragstart="drag(event)">Barney Stinson</div>
                     <div class="subject" id="3" draggable="true" ondragstart="drag(event)">Robin Stinson</div>
