Final version for first demo

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,10 @@
     </div>
 
     <div class="main">
-
         <div class="sign">
             <div class="signin">
                 <p class="signHeadings">Sign in</p>
-                <form>
+                <form action="teamSetup.html">
                     <table class="signinTable">
                         <tr>
                             <td>Username:</td>
