--- a/src/teamSetup.html
+++ b/src/teamSetup.html
@@ -6,6 +6,8 @@
     <title>Project Mockup</title>
     
     <script src="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+    <script src="APIs/jquery-2.1.4.min.js"></script>
+    <script src="scripts/dbInteraction.js"></script>
     <link rel="stylesheet" href="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="style/css.css">
 
